--- a/docs/source/rest-api/spec.yml
+++ b/docs/source/rest-api/spec.yml
@@ -7,7 +7,7 @@ host: augur.chaoss.io
 info:
   title: Augur REST API
   version: 0.21.11
-openapi: 3.0.0
+openapi: 3.1.0
 paths:
   #utility endpoints
   /repo-groups:
@@ -5400,3 +5400,237 @@ paths:
             type: array
       tags:
       - evolution
+
+# USER Endpoints
+
+  /user/session/generate:
+    post:
+      description: The final step in the Augur Oauth authorization process. The Client Application uses this endpoint to exchange a temporary authorization code (generated in the previous authorization step) with a valid Bearer token.
+      operationId: Generate User Session Token
+      parameters:
+      - description: Client [API_Key]
+        in: header
+        required: true
+        name: Authorization
+        schema:
+          type: string
+        type: string
+      - description: Temporary authorization code
+        in: query
+        required: true
+        name: code
+        schema:
+          type: string
+        type: string
+      - description: Required to be "code"
+        in: query
+        required: true
+        name: grant_type
+        schema:
+          type: string
+        type: string
+      responses:
+        '200':
+          description: OK
+          schema:
+              type: object
+              properties:
+                status:
+                  type: string
+                  enum: [Validated, Invalid grant type, Invalid authorization code, Invalid user]
+                  example: Validated
+                username:
+                  type: string
+                  description: The login name of the User assocaited with this request. Only returned on success.
+                access_token:
+                  type: string
+                  description: The newly generated Bearer token for this User+Application authorization. Only returned on success.
+                refresh_token:
+                  type: string
+                  description: The refresh token associated with this transaction. Only returned on success.
+                token_type:
+                  type: string
+                  example: Bearer
+                  enum: [Bearer]
+                  description: Only returned on success.
+                expires:
+                  type: integer
+                  description: The number of seconds until the provided Bearer token expires.
+          headers:
+            Cache-Control:
+              description: Always set to "no-store"
+              content:
+                text/plain:
+                  schema:
+                    type: string
+                    enum: [no-store]
+                    example: no-store
+        '400':
+          description: Missing Argument
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                enum: ["Missing argument: code"]
+      tags:
+      - login
+  /user/session/refresh:
+    post:
+      description: Exchange a valid refresh token for a new Bearer token and a new refresh token. The Bearer token returned from this endpoint may be the same as the current Bearer token. If the new Bearer token returned from this endpoint is not the same as the current Bearer token, then the current token is now invalid. The same is true for the existing refresh token.
+      operationId: Refresh User Session Token
+      parameters:
+      - description: Client [API_Key]
+        in: header
+        required: true
+        name: Authorization
+        schema:
+          type: string
+        type: string
+      - description: The refresh token generated in the previous authorization request.
+        in: query
+        required: true
+        name: refresh_token
+        schema:
+          type: string
+        type: string
+      - description: Required to be "refresh_token"
+        in: query
+        required: true
+        name: grant_type
+        schema:
+          type: string
+        type: string
+      responses:
+        '200':
+          description: OK
+          schema:
+              type: object
+              properties:
+                status:
+                  type: string
+                  enum: [Validated, Invalid grant type, Invalid refresh token, Invalid application]
+                  example: Validated
+                  description: Status "Invalid application" is returned when the  issuing application (IE; that which the refresh token belongs to) is not the same as the requesting application (IE; that which is making the current request). Refresh tokens may only be used by the issuing application.
+                access_token:
+                  type: string
+                  description: The newly generated Bearer token for this User+Application authorization. Only returned on success.
+                refresh_token:
+                  type: string
+                  description: The refresh token associated with this transaction. Only returned on success.
+                expires:
+                  type: integer
+                  description: The number of seconds until the provided Bearer token expires.
+          headers:
+            Cache-Control:
+              description: Always set to "no-store"
+              content:
+                text/plain:
+                  schema:
+                    type: string
+                    enum: [no-store]
+                    example: no-store
+        '400':
+          description: Missing Argument
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                enum: ["Missing argument: refresh_token"]
+      tags:
+      - login
+
+# DEI Endpoints
+
+  /dei/repo/add:
+    post:
+      description: Add and start repo for DEI Badging
+      operationId: DEI Badging Tracking
+      parameters:
+      - description: Client [API_Key]
+        in: header
+        required: true
+        name: Authorization
+        schema:
+          type: string
+        type: string
+      - description: The source badging ID
+        in: query
+        required: true
+        name: id
+        schema:
+          type: string
+        type: string
+      - description: The badging level
+        in: query
+        required: true
+        name: level
+        schema:
+          type: string
+        type: string
+      - description: The repo URL to track
+        in: query
+        required: true
+        name: url
+        schema:
+          type: string
+        type: string
+      responses:
+        '200':
+          description: OK
+          schema:
+              type: object
+              properties:
+                status:
+                  type: string
+                  enum: [Success, Repo already exists, Error adding repo]
+                  example: Success
+        '400':
+          description: Missing Argument
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                enum: ["Missing argument"]
+      tags:
+      - DEI Badging
+  /dei/report:
+    post:
+      description: Request the report for the given badging project. On success, the report PDF will be returned in a Binary response. On failure, a JSON response with a status will be returned.
+      operationId: DEI Badging Report
+      parameters:
+      - description: Client [API_Key]
+        in: header
+        required: true
+        name: Authorization
+        schema:
+          type: string
+        type: string
+      - description: The source badging ID
+        in: query
+        required: true
+        name: id
+        schema:
+          type: string
+        type: string
+      responses:
+        '200':
+          description: OK
+          schema:
+              type: object
+              properties:
+                status:
+                  type: string
+                  enum: [Invalid ID]
+        '400':
+          description: Missing Argument
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                enum: ["Missing argument"]
+      tags:
+      - DEI Badging
