--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,6 +5,10 @@
 
 # Required
 version: 2
+build: 
+  os: ubuntu-22.04  # <- add this line
+  tools:
+    python: "3.10"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
@@ -18,17 +22,17 @@ sphinx:
 formats: all
 
 # Optionally set the version of Python and requirements required to build your docs
-python:
-   version: 3.10
-   install:
-      - method: pip
-        path: .
-        extra_requirements:
-            - dev
-      - method: setuptools
-        path: .
+#python:
+#   version: 3.10
+#   install:
+#      - method: pip
+#        path: .
+#        extra_requirements:
+#            - dev
+#      - method: setuptools
+#        path: .
 
-   build: 
-     os: ubuntu-22.04
-     tools: 
-       python:3.10
+#   build: 
+#     os: ubuntu-22.04
+#     tools: 
+#       python:3.10
