--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -22,15 +22,15 @@ sphinx:
 formats: all
 
 # Optionally set the version of Python and requirements required to build your docs
-#python:
-#   version: 3.10
-#   install:
-#      - method: pip
-#        path: .
-#        extra_requirements:
-#            - dev
-#      - method: setuptools
-#        path: .
+python:
+   version: 3.10
+   install:
+      - method: pip
+        path: .
+        extra_requirements:
+            - dev
+      - method: setuptools
+        path: .
 
 #   build: 
 #     os: ubuntu-22.04
